// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`http requests > abort 1`] = `
{
  "cause": "<sample reason>",
  "message": "request to http://mock.api/?verb=Identify has failed",
  "name": "OaiPmhRequestInitError",
}
`;

exports[`http requests > abort with timeout, after timeout 1`] = `
{
  "cause": "<sample reason>",
  "message": "request to http://mock.api/?verb=Identify has failed",
  "name": "OaiPmhRequestInitError",
}
`;

exports[`http requests > abort with timeout, after timeout but before something todo 1`] = `
{
  "cause": "<sample reason>",
  "message": "request to http://mock.api/?verb=Identify has failed",
  "name": "OaiPmhRequestInitError",
}
`;

exports[`http requests > abort with timeout, before timeout 1`] = `
{
  "cause": "<sample reason>",
  "message": "request to http://mock.api/?verb=Identify has failed",
  "name": "OaiPmhRequestInitError",
}
`;

exports[`http requests > custom request fn with error 1`] = `
{
  "cause": {
    "cause": "<retracted>",
    "fullMessage": "message sample",
    "message": "message sample",
    "name": "OaiPmhRequestError",
  },
  "message": "request to http://mock.api/?verb=Identify has failed",
  "name": "OaiPmhRequestInitError",
}
`;

exports[`http requests > response outside of 200-299 status 1`] = `
{
  "cause": "<retracted>",
  "fullMessage": "message sample",
  "message": "message sample",
  "name": "OaiPmhRequestError",
}
`;

exports[`http requests > response outside of 200-299 status 2`] = `
{
  "cause": "<retracted>",
  "fullMessage": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porta lobortis sagittis.Mauris porttitor enim at aliquam interdum. Mauris et arcu ut augue convallis finibusut sit amet ipsum. Morbi auctor vulputate volutpat. Integer ultrices, ligula utvenenatis pretium, velit odio finibus mauris, vel eleifend felis enim non metus.",
  "message": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porta lobortis sagittis.Mauris porttitor enim at aliquam interdum. Mauris et arcu ut augue convallis finibusut sit amet ipsum. Morbi auctor vulputate volutpat. Integer ultrices, ligula utven ...",
  "name": "OaiPmhRequestError",
}
`;

exports[`http requests > response outside of 200-299 status 3`] = `
{
  "cause": "<retracted>",
  "fullMessage": "",
  "message": "request returned an error",
  "name": "OaiPmhRequestError",
}
`;

exports[`http requests > timeout error 1`] = `
{
  "cause": {
    "cause": {
      "init": "<retracted>",
      "timeout": 0,
    },
    "message": "request timed out after 0ms",
    "name": "OaiPmhRequestTimeOutError",
  },
  "message": "request to http://mock.api/?verb=Identify has failed",
  "name": "OaiPmhRequestInitError",
}
`;
